unpackaged/main/default/objects/Dero_Fi__c/Dero_Fi__c.object-meta.xml
<CustomObject>
    <label>Conditions Financières</label>
    <nameField>
        <displayFormat>Cond Fi - {0000}</displayFormat>
        <label>Dero. Financière Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conditions Financières</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>