unpackaged/main/default/objects/Dero_Fi__c/fields/Administration__c.field-meta.xml
<CustomField>
    <fullName>Administration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Administration</label>
    <type>Checkbox</type>
</CustomField>