unpackaged/main/default/objects/Dero_Fi__c/fields/Delai_reglement__c.field-meta.xml
<CustomField>
    <fullName>Delai_reglement__c</fullName>
    <label>Delai de règlement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Delai_reglement</valueSetName>
    </valueSet>
</CustomField>