unpackaged/main/default/objects/Dero_Fi__c/fields/Dpt_garantie__c.field-meta.xml
<CustomField>
    <fullName>Dpt_garantie__c</fullName>
    <label>Dépot de garantie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Depot_garantie</valueSetName>
    </valueSet>
</CustomField>