unpackaged/main/default/objects/Dero_Fi__c/fields/Mode_facturation__c.field-meta.xml
<CustomField>
    <fullName>Mode_facturation__c</fullName>
    <label>Mode facturation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mode_facturation</valueSetName>
    </valueSet>
</CustomField>