unpackaged/main/default/objects/Dero_Fi__c/fields/Mode_reglement__c.field-meta.xml
<CustomField>
    <fullName>Mode_reglement__c</fullName>
    <label>Mode reglement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mode_reglement</valueSetName>
    </valueSet>
</CustomField>