unpackaged/main/default/objects/Dero_Fi__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carrosseries</fullName>
            </value>
            <value>
                <fullName>Containers</fullName>
            </value>
            <value>
                <fullName>Meubles</fullName>
            </value>
            <value>
                <fullName>Véhicules Frigorifiques</fullName>
            </value>
            <value>
                <fullName>Véhicules Secs</fullName>
            </value>
            <value>
                <fullName>Refrigerated vehicle</fullName>
            </value>
            <value>
                <fullName>Dry vehicle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>