unpackaged/main/default/objects/Dero_Fi__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipName>Dero_Fi</relationshipName>
    <type>Lookup</type>
</CustomField>