unpackaged/main/default/objects/Dero_Fi__c/fields/SalesArea__c.field-meta.xml
<CustomField>
    <fullName>SalesArea__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organisation Commerciale</label>
    <referenceTo>SalesArea__c</referenceTo>
    <relationshipLabel>Conditions Financières</relationshipLabel>
    <relationshipName>Conditions_Financi_res</relationshipName>
    <type>Lookup</type>
</CustomField>