unpackaged/main/default/objects/Dero_Fi__c/fields/SalesAreaData__c.field-meta.xml
<CustomField>
    <fullName>SalesAreaData__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Use for specific financial condition</description>
    <label>Vue Commerciale Client</label>
    <referenceTo>SalesAreaData__c</referenceTo>
    <relationshipLabel>Conditions Financières</relationshipLabel>
    <relationshipName>Conditions_Financieres</relationshipName>
    <type>Lookup</type>
</CustomField>