unpackaged/main/default/objects/Dero_Fi__c/fields/Standard__c.field-meta.xml
<CustomField>
    <fullName>Standard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Standard?</label>
    <type>Checkbox</type>
</CustomField>