unpackaged/main/default/objects/Dero_Fi__c/fields/Uplift_Mode__c.field-meta.xml
<CustomField>
    <fullName>Uplift_Mode__c</fullName>
    <label>Mode d&#39;indexation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mode_d_indexation</valueSetName>
    </valueSet>
</CustomField>