unpackaged/main/default/objects/Dero_Fi__c/recordTypes/Specific_Financial_Conditions.recordType-meta.xml
<RecordType>
    <fullName>Specific_Financial_Conditions</fullName>
    <active>true</active>
    <label>Container - Déro Financière - Spécifique</label>
</RecordType>