unpackaged/main/default/objects/Dero_Fi__c/recordTypes/Standard_Financial_Conditions.recordType-meta.xml
<RecordType>
    <fullName>Standard_Financial_Conditions</fullName>
    <active>true</active>
    <label>Container - Déro. Financière – Standard</label>
</RecordType>