unpackaged/main/default/objects/Dero_Fi__c/recordTypes/VehiculeCourteDuree.recordType-meta.xml
<RecordType>
    <fullName>VehiculeCourteDuree</fullName>
    <active>true</active>
    <label>Vehicule - Courte Durée</label>
</RecordType>