unpackaged/main/default/objects/Dero_Fi__c/recordTypes/VehiculeMoyenneDuree.recordType-meta.xml
<RecordType>
    <fullName>VehiculeMoyenneDuree</fullName>
    <active>true</active>
    <label>Vehicule - Moyenne durée</label>
</RecordType>