unpackaged/main/default/objects/Dero_Fi__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type_de_location__c</columns>
    <columns>SalesArea__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>