unpackaged/main/default/objects/Dero_Fi__c/listViews/D_rogation_Sp_cifique.listView-meta.xml
<ListView>
    <fullName>D_rogation_Sp_cifique</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Account__c</columns>
    <columns>Type_de_location__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Dero_Fi__c.Specific_Financial_Conditions</value>
    </filters>
    <label>Dérogation Spécifique</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>