unpackaged/main/default/objects/Dero_Fi__c/listViews/D_rogation_Standard_Administration.listView-meta.xml
<ListView>
    <fullName>D_rogation_Standard_Administration</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Standard__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Administration__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Dero_Fi__c.Standard_Financial_Conditions</value>
    </filters>
    <label>Dérogation Standard - Administration</label>
</ListView>